--- a/package.json
+++ b/package.json
@@ -32,5 +32,8 @@
 		"typescript": "^5.9.3",
 		"typescript-eslint": "^8.53.1",
 		"vite": "^7.3.1"
+	},
+	"dependencies": {
+		"@storyblok/richtext": "^3.8.2"
 	}
 }
